src/test/deca/syntax/valid/testReturn.deca
// test return
// result : OK
{
    int x = 67;
    if (x > 2){
        return x;
    }
}
