src/test/deca/syntax/invalid/testExprIf2.deca
// test invalid if statements
// Result : Error
{
    if (1=2){
        printx("Ok");
    }
}
